syntax="proto3";
// i must add this so that the generated file will have a prefix  this to allow for calling
 package internalservice;

 option go_package="./internalservice";

// here we should describe the request from the api_gateway
message create_user_req{
    string globaluserid =1;
    string phonenumber= 2;
    string kycstatus=3;
    string kyclevel=4;
    bool acceptterms=5;
    int64 transactionlimit=6;
    string username=7;
    string fullname=8;
}

message create_user_resp{
    string status=1;
    optional string message=2;
    optional changeseterrors errors=3;
}

message validationerror{
    string field=1;
    string message=2;
}
message changeseterrors{
    repeated validationerror errors=1;
}
message user_account_data_req{
    string id =1;
}
message transfer_req{
    string from_id =1;
    string to_id=2;
    string gold_amount=3;
    string cash_amount=4;
}

message history_req{
    string globaluserid=1;
}

/*
request i am thinking should be values like get_account_amount(account_details)
request transfering amount from one person's wallet to another(transfer)
if they want to see any opening they can (openings)
if they are looking for someone selling gold (sale)
market
history

*/
message user_data_resp{
    int64 gold_amount=1;
    int64 cash_amount=2;
}

// for gold every
message transfer_resp{
    string transer_id=1;
    string from=2;
    string to=3;
    int64 gold_amount=4;
    int64 money_amount=5;
    bool success = 6;
    optional string reason=7;
}
service gigservice{
    rpc account_details(user_account_data_req) returns (user_data_resp);
    rpc transfer(transfer_req)returns (transfer_resp);
    rpc createaccount(create_user_req) returns (create_user_resp);
}

/*
request i am thinking should be values like get_account_amount(account_details)
request transfering amount from one person's wallet to another(transfer)
if they want to see any opening they can (openings)
if they are looking for someone selling gold (sale)
market
history

*/